# langchain_course

./: pyproject.toml
1/: hello_world.py  hello_world_gemini.py  hello_world_template.py
2-streamlit-chatbot/: streamlit_chatbot.py
3-runnables/: chat_prompt_template.py  message_placeholders.py  output_parsers.py  parallel_runnable.py  prompt_templates.py  role_prompt_template.py  runnables.py  secuencial_runnable.py  streamlit_chatbot_with_chatprompt_template.py
5-loaders/: document_loaders.py  google_drive_loader.py  text_splitters.py
6-embeddings/: embeddings_langchain.py
7-chromadb/: multi_query_retriever.py  retrievers_langchain.py  vector_stores.py
7-chromadb/chroma_db/: chroma.sqlite3
8-asistente-legal-RAG/: config.py  rag_system.py
