[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-api-python-client>=2.188.0",
    "google-auth>=2.47.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "langchain>=1.2.2",
    "langchain-community>=0.4.1",
    "langchain-google-community>=3.0.5",
    "langchain-google-genai>=4.1.3",
    "langchain-openai>=1.1.7",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pypdf>=6.6.0",
    "streamlit>=1.52.2",
]
